--- a/about.html
+++ b/about.html
@@ -205,13 +205,14 @@
     <!-- Scroll-to-top button -->
     <button type="button" id="backToTop" title="Go to top">↑</button>
 
-    <!-- Site Header -->
     <header>
       <img src="/images/CICL.jpg" alt="CICL brand logo" class="logo" />
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" aria-current="page">Home</a>
+            <a href="/index.html" class="active-navlink" aria-current="page"
+              >Home</a
+            >
           </li>
           <li role="listitem" class="nav-item services" id="service">
             <a href="/service.html" class="nav-link"
@@ -224,7 +225,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Talent Management &amp; HR Solutions
-                    <a href="service/talent-management-hr-solution.html"
+                    <a href="/services/talent-management-hr-solution.html"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -235,7 +236,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/recruitment-selection.html"
                           ><strong>Recruitment &amp; Selection</strong>
                           <div class="item-sub">
                             Find and retain the right talent through a
@@ -251,7 +252,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/training-development.html"
                           ><strong>Training &amp; Development</strong>
                           <div class="item-sub">
                             Tailored corporate programs that boost employee
@@ -266,7 +267,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                           ><strong>Talent &amp; Payroll Outsourcing</strong>
                           <div class="item-sub">
                             Stress-free HR and payroll solutions to save time
@@ -281,7 +282,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/background-checks-verification.html"
                           ><strong>Background Checks &amp; Verification</strong>
                           <div class="item-sub">
                             Reduce risks with comprehensive employee and
@@ -293,7 +294,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-book icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                           ><strong>HR Policies &amp; Employee Handbook</strong>
                           <div class="item-sub">
                             Clear, transparent policies that align people with
@@ -308,7 +309,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/career-service.html"
                           ><strong>Career Services</strong>
                           <div class="item-sub">
                             CV, LinkedIn, and professional profile optimization
@@ -323,7 +324,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Business Development &amp; Strategy
-                    <a href="service/talent-management-hr-solution.html"
+                    <a href="/services/business-development-strategy.html"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -334,7 +335,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/market-research-business-analysis.html"
                           ><strong
                             >Market Research &amp; Business Analysis</strong
                           >
@@ -351,7 +352,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/business-model-structure-design.html"
                           ><strong
                             >Business Model &amp; Structure Design</strong
                           >
@@ -367,7 +368,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/corporate-strategy-execution.html"
                           ><strong>Corporate Strategy &amp; Execution</strong>
                           <div class="item-sub">
                             Align vision, people, and processes for measurable
@@ -382,7 +383,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/corporate-branding.html"
                           ><strong>Corporate Branding</strong>
                           <div class="item-sub">
                             Create powerful, trust-building brand identities.
@@ -393,7 +394,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-gears icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/business-process-optimization.html"
                           ><strong>Business Process Optimization</strong>
                           <div class="item-sub">
                             Streamline operations and eliminate inefficiencies.
@@ -404,7 +405,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-coins icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/financial-modeling-valuation.html"
                           ><strong>Financial Modeling &amp; Valuation</strong>
                           <div class="item-sub">
                             Gain clarity on investments and performance.
@@ -418,7 +419,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/auditing-reconciliation.html"
                           ><strong>Auditing &amp; Reconciliation</strong>
                           <div class="item-sub">
                             Ensure compliance, accuracy, and accountability.
@@ -432,7 +433,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Professional Training Programmes
-                    <a href="service/talent-management-hr-solution.html"
+                    <a href="/services/professional-training-programme.html"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -443,7 +444,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/leadership-management.html"
                           ><strong>Leadership &amp; Management</strong>
                           <div class="item-sub">
                             Develop emotionally intelligent leaders who inspire
@@ -455,7 +456,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-users icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/hr-people-maagement-training.html"
                           ><strong>HR &amp; People Management</strong>
                           <div class="item-sub">
                             Build HR teams that drive business success.
@@ -469,7 +470,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/finance-accounting.html"
                           ><strong>Finance &amp; Accounting</strong>
                           <div class="item-sub">
                             Strengthen financial literacy across your
@@ -484,7 +485,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/technology-data.html"
                           ><strong>Technology &amp; Data</strong>
                           <div class="item-sub">
                             Professional Excel, Power BI, Python, and analytics
@@ -497,7 +498,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-truck icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/operation-supply-chain.html"
                           ><strong>Operations &amp; Supply Chain</strong>
                           <div class="item-sub">
                             Drive efficiency in procurement, inventory, and
@@ -512,7 +513,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/health-safety-environment.html"
                           ><strong
                             >Health, Safety &amp; Environment (HSE)</strong
                           >
@@ -529,7 +530,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/sales-marketing.html"
                           ><strong>Sales &amp; Marketing</strong>
                           <div class="item-sub">
                             Cutting-edge strategies for digital growth and
@@ -542,18 +543,22 @@
                 </ul>
               </div>
               <p class="mega-footer">
-                Unlock your career potential, <a href="#">Connect with us</a>
+                Unlock your career potential, <a href="/contact.html">Connect with us</a>
               </p>
             </div>
           </li>
           <li role="listitem" class="nav-item">
-            <a href="/about.html" class="active-navlink" aria-current="page"
-              >About us</a
-            >
+            <a href="/about.html" class="nav-link">About us</a>
           </li>
           <li role="listitem" class="nav-item">
             <a href="/contact.html" class="nav-link">Contact us</a>
           </li>
+          <!-- <li role="listitem" class="nav-item">
+            <a href="#" class="nav-link"
+              >Resources<span class="caret"
+                ><i class="fa-solid fa-chevron-down"></i></span
+            ></a>
+          </li> -->
         </ul>
       </nav>
 
@@ -777,7 +782,6 @@
         </ul>
       </nav>
     </header>
-
     <!-- Main -->
     <main
       id="main"
