--- a/contact.html
+++ b/contact.html
@@ -185,7 +185,9 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html">Home</a>
+            <a href="/index.html" class="active-navlink" aria-current="page"
+              >Home</a
+            >
           </li>
           <li role="listitem" class="nav-item services" id="service">
             <a href="/service.html" class="nav-link"
@@ -198,7 +200,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Talent Management &amp; HR Solutions
-                    <a href="service/talent-management-hr-solution.html"
+                    <a href="/services/talent-management-hr-solution.html"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -209,7 +211,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/recruitment-selection.html"
                           ><strong>Recruitment &amp; Selection</strong>
                           <div class="item-sub">
                             Find and retain the right talent through a
@@ -225,7 +227,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/training-development.html"
                           ><strong>Training &amp; Development</strong>
                           <div class="item-sub">
                             Tailored corporate programs that boost employee
@@ -240,7 +242,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                           ><strong>Talent &amp; Payroll Outsourcing</strong>
                           <div class="item-sub">
                             Stress-free HR and payroll solutions to save time
@@ -255,7 +257,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/background-checks-verification.html"
                           ><strong>Background Checks &amp; Verification</strong>
                           <div class="item-sub">
                             Reduce risks with comprehensive employee and
@@ -267,7 +269,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-book icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                           ><strong>HR Policies &amp; Employee Handbook</strong>
                           <div class="item-sub">
                             Clear, transparent policies that align people with
@@ -282,7 +284,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/career-service.html"
                           ><strong>Career Services</strong>
                           <div class="item-sub">
                             CV, LinkedIn, and professional profile optimization
@@ -297,7 +299,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Business Development &amp; Strategy
-                    <a href="service/business-development-strategy.html"
+                    <a href="/services/business-development-strategy.html"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -308,7 +310,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/market-research-business-analysis.html"
                           ><strong
                             >Market Research &amp; Business Analysis</strong
                           >
@@ -325,7 +327,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/business-model-structure-design.html"
                           ><strong
                             >Business Model &amp; Structure Design</strong
                           >
@@ -341,7 +343,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/corporate-strategy-execution.html"
                           ><strong>Corporate Strategy &amp; Execution</strong>
                           <div class="item-sub">
                             Align vision, people, and processes for measurable
@@ -356,7 +358,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/corporate-branding.html"
                           ><strong>Corporate Branding</strong>
                           <div class="item-sub">
                             Create powerful, trust-building brand identities.
@@ -367,7 +369,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-gears icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/business-process-optimization.html"
                           ><strong>Business Process Optimization</strong>
                           <div class="item-sub">
                             Streamline operations and eliminate inefficiencies.
@@ -378,7 +380,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-coins icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/financial-modeling-valuation.html"
                           ><strong>Financial Modeling &amp; Valuation</strong>
                           <div class="item-sub">
                             Gain clarity on investments and performance.
@@ -392,7 +394,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/auditing-reconciliation.html"
                           ><strong>Auditing &amp; Reconciliation</strong>
                           <div class="item-sub">
                             Ensure compliance, accuracy, and accountability.
@@ -406,7 +408,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Professional Training Programmes
-                    <a href="service/professional-training-programmes.html"
+                    <a href="/services/professional-training-programme.html"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -417,7 +419,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/leadership-management.html"
                           ><strong>Leadership &amp; Management</strong>
                           <div class="item-sub">
                             Develop emotionally intelligent leaders who inspire
@@ -429,7 +431,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-users icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/hr-people-maagement-training.html"
                           ><strong>HR &amp; People Management</strong>
                           <div class="item-sub">
                             Build HR teams that drive business success.
@@ -443,7 +445,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/finance-accounting.html"
                           ><strong>Finance &amp; Accounting</strong>
                           <div class="item-sub">
                             Strengthen financial literacy across your
@@ -458,7 +460,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/technology-data.html"
                           ><strong>Technology &amp; Data</strong>
                           <div class="item-sub">
                             Professional Excel, Power BI, Python, and analytics
@@ -471,7 +473,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-truck icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/operation-supply-chain.html"
                           ><strong>Operations &amp; Supply Chain</strong>
                           <div class="item-sub">
                             Drive efficiency in procurement, inventory, and
@@ -486,7 +488,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/health-safety-environment.html"
                           ><strong
                             >Health, Safety &amp; Environment (HSE)</strong
                           >
@@ -503,7 +505,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/sales-marketing.html"
                           ><strong>Sales &amp; Marketing</strong>
                           <div class="item-sub">
                             Cutting-edge strategies for digital growth and
@@ -516,7 +518,7 @@
                 </ul>
               </div>
               <p class="mega-footer">
-                Unlock your career potential, <a href="#">Connect with us</a>
+                Unlock your career potential, <a href="/contact.html">Connect with us</a>
               </p>
             </div>
           </li>
@@ -524,12 +526,7 @@
             <a href="/about.html" class="nav-link">About us</a>
           </li>
           <li role="listitem" class="nav-item">
-            <a
-              href="/contact.html"
-              class="active-navlink"
-              aria-current="page"
-              >Contact us</a
-            >
+            <a href="/contact.html" class="nav-link">Contact us</a>
           </li>
           <!-- <li role="listitem" class="nav-item">
             <a href="#" class="nav-link"
@@ -775,7 +772,6 @@
         <a class="btn-ghost" href="/request-proposal">Request proposal</a>
       </div>
 
-      <!-- Decorative collage (replace images when ready) -->
       <div
         data-aos="fade-up"
         data-aos="fade-down"
