--- a/service.html
+++ b/service.html
@@ -67,7 +67,10 @@
               <div class="mega-container">
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
-                    Talent Management &amp; HR Solutions <a href="service/talent-management-hr-solution.html"><i class="fa-solid fa-link"></i> Explore</a>
+                    Talent Management &amp; HR Solutions
+                    <a href="/services/talent-management-hr-solution.html"
+                      ><i class="fa-solid fa-link"></i> Explore</a
+                    >
                   </li>
                   <ul role="list" class="accordion-content">
                     <li role="listitem">
@@ -76,7 +79,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/recruitment-selection.html"
                           ><strong>Recruitment &amp; Selection</strong>
                           <div class="item-sub">
                             Find and retain the right talent through a
@@ -92,7 +95,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/training-development.html"
                           ><strong>Training &amp; Development</strong>
                           <div class="item-sub">
                             Tailored corporate programs that boost employee
@@ -107,7 +110,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                           ><strong>Talent &amp; Payroll Outsourcing</strong>
                           <div class="item-sub">
                             Stress-free HR and payroll solutions to save time
@@ -122,7 +125,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/background-checks-verification.html"
                           ><strong>Background Checks &amp; Verification</strong>
                           <div class="item-sub">
                             Reduce risks with comprehensive employee and
@@ -134,7 +137,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-book icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                           ><strong>HR Policies &amp; Employee Handbook</strong>
                           <div class="item-sub">
                             Clear, transparent policies that align people with
@@ -149,7 +152,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/talent-management-hr-solution/career-service.html"
                           ><strong>Career Services</strong>
                           <div class="item-sub">
                             CV, LinkedIn, and professional profile optimization
@@ -163,7 +166,10 @@
 
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
-                    Business Development &amp; Strategy <a href="talent-management-hr-solution"><i class="fa-solid fa-link"></i> Explore</a>
+                    Business Development &amp; Strategy
+                    <a href="/services/business-development-strategy.html"
+                      ><i class="fa-solid fa-link"></i> Explore</a
+                    >
                   </li>
                   <ul class="accordion-content">
                     <li role="listitem">
@@ -172,7 +178,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/market-research-business-analysis.html"
                           ><strong
                             >Market Research &amp; Business Analysis</strong
                           >
@@ -189,7 +195,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/business-model-structure-design.html"
                           ><strong
                             >Business Model &amp; Structure Design</strong
                           >
@@ -205,7 +211,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/corporate-strategy-execution.html"
                           ><strong>Corporate Strategy &amp; Execution</strong>
                           <div class="item-sub">
                             Align vision, people, and processes for measurable
@@ -220,7 +226,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/corporate-branding.html"
                           ><strong>Corporate Branding</strong>
                           <div class="item-sub">
                             Create powerful, trust-building brand identities.
@@ -231,7 +237,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-gears icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/business-process-optimization.html"
                           ><strong>Business Process Optimization</strong>
                           <div class="item-sub">
                             Streamline operations and eliminate inefficiencies.
@@ -242,7 +248,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-coins icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/financial-modeling-valuation.html"
                           ><strong>Financial Modeling &amp; Valuation</strong>
                           <div class="item-sub">
                             Gain clarity on investments and performance.
@@ -256,7 +262,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/business-development/auditing-reconciliation.html"
                           ><strong>Auditing &amp; Reconciliation</strong>
                           <div class="item-sub">
                             Ensure compliance, accuracy, and accountability.
@@ -269,7 +275,10 @@
 
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
-                    Professional Training Programmes <a href="talent-management-hr-solution"><i class="fa-solid fa-link"></i> Explore</a>
+                    Professional Training Programmes
+                    <a href="/services/professional-training-programme.html"
+                      ><i class="fa-solid fa-link"></i> Explore</a
+                    >
                   </li>
                   <ul class="accordion-content">
                     <li role="listitem">
@@ -278,7 +287,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/leadership-management.html"
                           ><strong>Leadership &amp; Management</strong>
                           <div class="item-sub">
                             Develop emotionally intelligent leaders who inspire
@@ -290,7 +299,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-users icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/hr-people-maagement-training.html"
                           ><strong>HR &amp; People Management</strong>
                           <div class="item-sub">
                             Build HR teams that drive business success.
@@ -304,7 +313,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/finance-accounting.html"
                           ><strong>Finance &amp; Accounting</strong>
                           <div class="item-sub">
                             Strengthen financial literacy across your
@@ -319,7 +328,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/technology-data.html"
                           ><strong>Technology &amp; Data</strong>
                           <div class="item-sub">
                             Professional Excel, Power BI, Python, and analytics
@@ -332,7 +341,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-truck icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/operation-supply-chain.html"
                           ><strong>Operations &amp; Supply Chain</strong>
                           <div class="item-sub">
                             Drive efficiency in procurement, inventory, and
@@ -347,7 +356,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/health-safety-environment.html"
                           ><strong
                             >Health, Safety &amp; Environment (HSE)</strong
                           >
@@ -364,7 +373,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="#"
+                        <a href="/professional-training/sales-marketing.html"
                           ><strong>Sales &amp; Marketing</strong>
                           <div class="item-sub">
                             Cutting-edge strategies for digital growth and
@@ -377,7 +386,7 @@
                 </ul>
               </div>
               <p class="mega-footer">
-                Unlock your career potential, <a href="#">Connect with us</a>
+                Unlock your career potential, <a href="/contact.html">Connect with us</a>
               </p>
             </div>
           </li>
@@ -618,7 +627,9 @@
     </header>
 
     <main class="hero">
-      <h1 data-aos="fade-up" data-aos="fade-down">Solutions that build capabilities <br />and move business metrics</h1>
+      <h1 data-aos="fade-up" data-aos="fade-down">
+        Solutions that build capabilities <br />and move business metrics
+      </h1>
       <p data-aos="fade-up" data-aos="fade-down">
         We partner with organizations to transform strategy into measurable
         results. Our practical solutions span talent management, business
@@ -734,8 +745,10 @@
 
     <section class="organization-approach approach-bg">
       <div class="container">
-        <h4 data-aos="fade-up" data-aos="fade-down">Sart here</h4>
-        <h2 data-aos="fade-up" data-aos="fade-down">Find what you need in seconds</h2>
+        <h4 data-aos="fade-up" data-aos="fade-down">Start here</h4>
+        <h2 data-aos="fade-up" data-aos="fade-down">
+          Find what you need in seconds
+        </h2>
         <p data-aos="fade-up" data-aos="fade-down" class="p">
           Choose a path, hire and grow great teams, sharpen your strategy, or
           upskill your people. Every engagement is practical, measurable, and
@@ -751,6 +764,9 @@
               recruit faster, onboard right, and drive performance with clear
               KPIs.
             </p>
+            <a href="/services/talent-management-hr-solution.html"
+              >Explore service</a
+            >
           </div>
 
           <div data-aos="fade-up" data-aos="fade-down">
@@ -760,6 +776,9 @@
               Clarify your growth plan, tighten execution, and scale with
               confidence, market insight, operating models, and OKRs that stick.
             </p>
+            <a href="/services/business-development-strategy.html"
+              >Explore service</a
+            >
           </div>
 
           <div data-aos="fade-up" data-aos="fade-down">
@@ -770,17 +789,20 @@
               across leadership, tech, and operations, tailored to your
               industry.
             </p>
+            <a href="/services/professional-training-programme.html"
+              >Explore service</a
+            >
           </div>
         </div>
-
-        <a data-aos="fade-up" data-aos="fade-down" href="service.html" class="btn-solid">Explore Services</a>
       </div>
     </section>
 
     <section class="solutions-container">
       <div class="solutions-header">
         <h4 data-aos="fade-up" data-aos="fade-down">Solutions</h4>
-        <h2 data-aos="fade-up" data-aos="fade-down">Which path fits your need?</h2>
+        <h2 data-aos="fade-up" data-aos="fade-down">
+          Which path fits your need?
+        </h2>
         <p data-aos="fade-up" data-aos="fade-down">
           Choose the right solution for your organization's specific challenges
         </p>
@@ -847,7 +869,48 @@
       </div>
     </section>
 
-    <section class="organization-approach">
+    <section class="container outcomes organization-approach">
+      <h4 data-aos="fade-up" data-aos="fade-down">Impact</h4>
+      <h2 data-aos="fade-up" data-aos="fade-down">
+        What changes when we work together
+      </h2>
+      <p data-aos="fade-up" data-aos="fade-down">
+        Beyond frameworks and workshops, our work leaves you with systems,
+        habits, and capabilities that continue compounding long after the
+        engagement ends.
+      </p>
+
+      <div class="grid">
+        <div data-aos="fade-up" data-aos="fade-down">
+          <i class="fa-solid fa-building-user"></i>
+          <h3>Stronger people systems</h3>
+          <p>
+            Clear roles, fair policies, and performance structures that help
+            your people do their best work without constant firefighting.
+          </p>
+        </div>
+
+        <div data-aos="fade-up" data-aos="fade-down">
+          <i class="fa-solid fa-gauge-high"></i>
+          <h3>Execution that holds</h3>
+          <p>
+            Strategy translated into operating rhythms, dashboards, and KPIs
+            that keep teams focused on what really matters.
+          </p>
+        </div>
+
+        <div data-aos="fade-up" data-aos="fade-down">
+          <i class="fa-solid fa-layer-group"></i>
+          <h3>Teams that actually grow</h3>
+          <p>
+            Practical training and coaching that shift day-to-day behaviour, not
+            just head knowledge or motivational hype.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class="organization-approach">
       <div class="container">
         <h4 data-aos="fade-up" data-aos="fade-down">Our Approach</h4>
         <h2 data-aos="fade-up" data-aos="fade-down">Three pillars of organizational transformation</h2>
@@ -899,7 +962,7 @@
 
         <a data-aos="fade-up" data-aos="fade-down" href="" class="btn-solid">Explore Services</a>
       </div>
-    </section>
+    </section> -->
 
     <section class="container">
       <div class="testimonial-container">
@@ -1134,8 +1197,12 @@
 
     <section class="container process-flow-container">
       <div class="intro-column">
-        <h4 data-aos="fade-up" data-aos="fade-down" class="method-label">Method</h4>
-        <h2 data-aos="fade-up" data-aos="fade-down">Turning strategy into action with precision</h2>
+        <h4 data-aos="fade-up" data-aos="fade-down" class="method-label">
+          Method
+        </h4>
+        <h2 data-aos="fade-up" data-aos="fade-down">
+          Turning strategy into action with precision
+        </h2>
         <div data-aos="fade-up" data-aos="fade-down" class="cta-group">
           <a href="#" class="btn-solid">Explore</a>
           <a href="#" class="details-link"
@@ -1202,7 +1269,9 @@
     <section class="container faqs-section">
       <div class="faqs-header">
         <h2 data-aos="fade-up" data-aos="fade-down">FAQs</h2>
-        <p data-aos="fade-up" data-aos="fade-down">Common questions about our consulting services and approach</p>
+        <p data-aos="fade-up" data-aos="fade-down">
+          Common questions about our consulting services and approach
+        </p>
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down" class="faqs-grid">
@@ -1267,7 +1336,9 @@
     </section>
 
     <section class="container innovation">
-      <h2 data-aos="fade-up" data-aos="fade-down">Ready to transform your team?</h2>
+      <h2 data-aos="fade-up" data-aos="fade-down">
+        Ready to transform your team?
+      </h2>
       <p data-aos="fade-up" data-aos="fade-down">
         Start your journey towards high-performance leadership and
         organizational excellence.
